[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openverifiablellm"
version = "0.1.0"
description = "Deterministic dataset hashing utilities for verifiable LLM training"
authors = [
    {name = "Varshini"}
]
requires-python = ">=3.9"

dependencies = [
    "defusedxml",
    "tokenizers==0.15.2"
]

[tool.setuptools.packages.find]
include = ["openverifiablellm*"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
