[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openverifiablellm"
version = "0.1.0"
description = "Deterministic dataset hashing utilities for verifiable LLM training"
authors = [{name = "OpenVerifiableLLM Contributors"}]
requires-python = ">=3.10"

dependencies = [
    "defusedxml",
    "sentencepiece",
    "tokenizers==0.15.2",
    "numpy",
    "torch",
]

[tool.setuptools.packages.find]
include = ["openverifiablellm*"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:sentencepiece",
    "ignore:builtin type Swig:DeprecationWarning",
    "ignore:builtin type swigvarlink:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
